# lox

./: Cargo.toml
lox_examples/: broken_scopes.lox  class.lox  closure.lox  fib.lox  for.lox  func.lox  hello.lox  invalid.lox  print_a_func.lox
src/: ast.rs  bytecode.rs  compiler.rs  interpreter.rs  lib.rs  main.rs  parser.rs  resolver.rs  span.rs  tokenizer.rs  tree_walk_interpreter.rs  vm.rs
src/interpreter/: callable.rs  environment.rs  scope.rs
src/tree_walk_interpreter/: callable.rs  class.rs  scope.rs
src/vm/: bytecode.rs  stack.rs
tests/: integration_test.rs
