[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = []

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
justerror = "1.1.0"
thiserror = "1.0.58"

[profile.release]
debug = true
